error.txt
node.exe : C:\Users\USE
R\Downloads\WorkAIAcade
my\test-pesapal.ts:2
At line:1 char:1
+ & "C:\Program 
Files\nodejs/node.exe" 
"C:\Program 
Files\nodejs/node_mo 
...
+ ~~~~~~~~~~~~~~~~~~~~~
~~~~~~~~~~~~~~~~~~~~~~~
~~~~~~~~~~~~~~~~~~~~~~~
~~
    + CategoryInfo     
         : NotSpecifi  
  ed: (C:\Users\USER   
 \D...st-pesapal.ts    
:2:String) [], Rem    
oteException
    + FullyQualifiedEr 
   rorId : NativeComm  
  andError
 
import { 
authenticatePesaPal, 
submitOrder } from 
'./api/_pesapal.ts';
         ^

SyntaxError: The 
requested module 
'./api/_pesapal.ts' 
does not provide an 
export named 
'authenticatePesaPal'
    at 
ModuleJob._instantiate 
(node:internal/modules/
esm/module_job:228:21)
    at async 
ModuleJob.run (node:int
ernal/modules/esm/modul
e_job:335:5)
    at async onImport.t
racePromise.__proto__ (
node:internal/modules/e
sm/loader:647:26)
    at async asyncRunEn
tryPointWithESMLoader (
node:internal/modules/r
un_main:117:5)

Node.js v22.18.0
